; ModuleID = '/home/carl/AnghaBench/reactos/base/services/nfsd/extr_util.c_map_symlink_errors.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/nfsd/extr_util.c_map_symlink_errors.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR_INVALID_REPARSE_DATA = common dso_local global i32 0, align 4
@ERROR_NOT_A_REPARSE_POINT = common dso_local global i32 0, align 4
@ERROR_ACCESS_DENIED = common dso_local global i32 0, align 4
@ERROR_NOT_EMPTY = common dso_local global i32 0, align 4
@ERROR_BAD_NET_RESP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @map_symlink_errors(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %13 [
    i32 131, label %5
    i32 130, label %5
    i32 128, label %7
    i32 132, label %9
    i32 129, label %11
  ]

5:                                                ; preds = %1, %1
  %6 = load i32, i32* @ERROR_INVALID_REPARSE_DATA, align 4
  store i32 %6, i32* %2, align 4
  br label %17

7:                                                ; preds = %1
  %8 = load i32, i32* @ERROR_NOT_A_REPARSE_POINT, align 4
  store i32 %8, i32* %2, align 4
  br label %17

9:                                                ; preds = %1
  %10 = load i32, i32* @ERROR_ACCESS_DENIED, align 4
  store i32 %10, i32* %2, align 4
  br label %17

11:                                               ; preds = %1
  %12 = load i32, i32* @ERROR_NOT_EMPTY, align 4
  store i32 %12, i32* %2, align 4
  br label %17

13:                                               ; preds = %1
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @ERROR_BAD_NET_RESP, align 4
  %16 = call i32 @nfs_to_windows_error(i32 %14, i32 %15)
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %13, %11, %9, %7, %5
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @nfs_to_windows_error(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
